--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,4 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ansi-control-codes = "1.0.1"
-console = "0.16.0"
+zbus = { version = "5.13.1", features = ["blocking-api"] }
