--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-zbus = { version = "5.13.1", features = ["blocking-api"] }
+futures-util = "0.3.31"
+tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }
+zbus = { version = "5.13.1", features = ["tokio"] }
