--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 futures-util = "0.3.31"
+thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["rt", "macros", "time"] }
 zbus = { version = "5.13.1", features = ["tokio"] }
